[package]
name = "rust_echo"
version = "0.1.0"
authors = ["Sean <seanchen11235@gmail.com>"]

[dependencies]
clap = "*"
futures = {git = "https://github.com/alexcrichton/futures-rs"}
futures-io = {git = "https://github.com/alexcrichton/futures-rs"}
futures-mio = {git = "https://github.com/alexcrichton/futures-rs"}
